--- a/data/build.gradle
+++ b/data/build.gradle
@@ -49,6 +49,8 @@ dependencies {
     implementation (OkHttp.OKHTTP)
     implementation (OkHttp.LOGGING_INTERCEPTOR)
 
+    implementation (Coroutine.COROUTINE)
+
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
