--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -47,6 +47,7 @@ dependencies {
     implementation (OkHttp.OKHTTP)
     implementation (OkHttp.LOGGING_INTERCEPTOR)
 
+    implementation 'com.google.android.gms:play-services-tasks:18.0.1'
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
